# pumoide

./: .gitignore  Cargo.toml  LICENCE  LICENSE  README.md  tauri.conf.json
backend/: config.go  go.mod  main.go  routes.go
backend/api/: collection_handler.go  environment_handler.go  handlers.go  handlers_test.go  method_handler.go  request_handler.go  request_handlers.go  request_handlers_test.go  routes.go
backend/api/tests/: collection_handler_test.go  environment_handler_test.go  method_handler_test.go  request_handler_test.go
backend/apperrors/: error_handler.go
backend/models/: collection_models.go  environment_models.go  models.go  models_test.go
backend/models/tests/: collection_models_test.go  environment_models_test.go
backend/utils/: file_operations.go
backend/utils/tests/: file_operations_test.go
frontend/: package-lock.json  package.json
