[package]
name = "pumoide"
version = "0.1.0"
description = "An open-source, performant, and minimalistic API client"
authors = ["Federico Ares <federsab@gmail.com>"]
license = "MIT"
repository = "https://github.com/FedeBP/pumoide"
default-run = "pumoide"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true